syntax = "proto3";

package pb;

import "user.proto";

option go_package = "economic-school/pb";

message CreateUserRequest {
  string username = 1;
  string full_name = 2;
  string email = 3;
  int32 user_type = 4;
  string password = 5;
  string profile_file = 6;
  //bytes profile_file = 6;
}

message CreateUserResponse {
  User user = 1;
}