syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "rpc_create_user.proto";
import "rpc_login_user.proto";
import "rpc_update_user.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "rpc_verify_email.proto";
import "message_economic_school.proto";
import "google/protobuf/empty.proto";

option go_package = "economic-school/pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Economic School API";
    version: "1.2";
    contact: {
      name: "Yoshikawa Keita";
      url: "https://github.com/Yoshikawa-Keita";
      email: "keita_yoshi@icloud.com";
    };
  };
};

service EconomicSchool {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      post: "/v1/create_user"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use this API to create a new user";
      summary: "Create new user";
    };
  }

  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {
    option (google.api.http) = {
      patch: "/v1/update_user"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use this API to update user";
      summary: "Update user";
    };
  }

  rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {
    option (google.api.http) = {
      post: "/v1/login_user"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use this API to login user and get access token & refresh token";
      summary: "Login user";
    };
  }

  rpc VerifyEmail (VerifyEmailRequest) returns (VerifyEmailResponse) {
    option (google.api.http) = {
      post: "/v1/verify_email"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use this API to verify user's email address";
      summary: "Verify email";
    };
  }

  rpc CreateExam (CreateExamRequest) returns (Exam) {
    option (google.api.http) = {
      post: "/v1/exams"
      body: "*"
    };
  }
  rpc GetExam (GetExamRequest) returns (Exam) {
    option (google.api.http) = {
      get: "/v1/exams/{exam_id}"
    };
  }
  rpc ListExams (ListExamsRequest) returns (ListExamsResponse) {
    option (google.api.http) = {
      get: "/v1/list_exams"
    };
  }
  rpc UpdateExam (UpdateExamRequest) returns (Exam) {
    option (google.api.http) = {
      put: "/v1/exams/{exam.exam_id}"
      body: "exam"
    };
  }

  rpc DeleteExam (DeleteExamRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/exams/{exam_id}"
    };
  }

  rpc GetSignedUrl (GetSignedUrlRequest) returns (GetSignedUrlResponse) {
    option (google.api.http) = {
      post: "/v1/signed-url"
      body: "*"
    };
  }

}
